[tool.poetry]
name = "raise-utils"
version = "2.3.0"
description = "RAISE lab package"
authors = ["Rahul Yedida <rahul.yedida@pm.me>"]
license = "LGPL 2.1"
readme = "README.md"
packages = [{include = "raise_utils"}]

[tool.poetry.dependencies]
pytest = "^7.3.2"
pytest-cov = "^4.1.0"
cvxopt = "^1.3.1"
pandas = "^2.0.2"
numpy = "^1.23.2"
torch = "^2.3.0"
colorama = "^0.4.6"
hyperopt = "^0.2.7"
coverage = "^7.2.7"
scikit-learn = ">=0.23.2"
imblearn = "^0.0"
bohb-hpo = "^0.5.2"
Cython = "^0.29.24"
tabulate = "^0.8.9"
keras = "^3.0.0"
statsmodels = "^0.14.0"
python = ">=3.9"

[build-system]
requires = ["setuptools", "wheel", "Cython"]
build-backend = "setuptools.build_meta"
